#854 Moving the board actually works now. Clicking a clue will correctly move the board to make that clue's word visible if it isn't already.

--- a/player.scss
+++ b/player.scss
@@ -366,9 +366,11 @@ input {
 }
 
 #movable-container {
-	position: absolute;
-	top:67px;
-	left:10px;
+	position: fixed;
+	top: 70px;
+	left: 10px;
+	right: 210px;
+	bottom: 10px;
 }
 
 #movable {
